fix table on mobile

--- a/shared/components/Table/Table.scss
+++ b/shared/components/Table/Table.scss
@@ -121,8 +121,8 @@
     }
   }
 
-  // Exchange 
-  .exchange {
+  // Exchange and Swap history
+  .exchange, .historySwap {
     th {
       &:first-child {
         position: absolute;
